<resources>
    <string name="app_name">WeatherApp1</string>
    <string name="update">Update</string>
    <string name="temperature">Temperature</string>
    <string name="detail">Detail</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="add">Add</string>
    <string name="string_add" />
    <string name="delete">Delete</string>
    <string name="edit_user">Edit User</string>
    <string name="save">Save</string>
    <string name="country">Country</string>
</resources>
