<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/phSet"
        android:layout_width="357dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="266dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="320dp">

            <TextView
                android:id="@+id/cityField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="City"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/updateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="43dp" />

            <TextView
                android:id="@+id/detailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="72dp" />

            <TextView
                android:id="@+id/tempField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="99dp" />

            <TextView
                android:id="@+id/humidField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="127dp" />

            <TextView
                android:id="@+id/pressureField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="275dp"
            tools:layout_editor_absoluteY="26dp">

            <Button
                android:id="@+id/deleteBTN"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:text="@string/delete"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="248dp" />

            <Button
                android:id="@+id/editBTN"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:text="Edit"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="186dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>